log/build_2023-10-12_15-50-26/loki_base/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/loki/Documents/GitHub/saga_repo/install/loki_base/lib/python3.10/site-packages/loki_base/base_driver.py", line 293
    self.set_drive_params()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

